add picture from leetcode-78

--- a/子集.md
+++ b/子集.md
@@ -43,3 +43,35 @@
 	};
 
 ```
+
+# 方案2 ---位运算实现  
+- **思路**  
+    用三位的二进制表示ABC，A元素为100 = 4；B元素为010 = 2；C元素为001 = 1
+    如***构造***某一集合，即使用A,B,C对应的三个整数与该集合对应的整数做***&运算***，当为***真*** 时，将该元素***push进入***集合。  
+
+![](https://raw.githubusercontent.com/shuijingasd130/Resource/master/Picture/leetcode_78_2.png)  
+
+- 即假设有n个数，则这n个数分别用0001,0010，...，1<<n-1，1<<n，表示
+- 设nums元素个数为a个，则总共有2^a=m个集合
+- 每个集合的元素究竟是什么：从0到m遍历，与前面n个元素分别位与，输出为1，则item包含该元素，否则不包含  
+
+# 代码  
+``` cpp
+	class Solution {
+			public:
+					vector<vector<int>> subsets(vector<int>& nums) {
+							std::vector<std::vector<int>> result;
+							int all_set = 1<<nums.size();   //2^n
+							for(int i=0; i<all_set; i++){
+									std::vector<int> item;
+									for(int j=0; j<nums.size(); j++){
+											if(i & (1<<j)){   //构造数字代表的集合，各元素存储到item
+													item.push_back(nums[j]);
+											}
+									}
+									result.push_back(item);
+							}
+							return result;
+					}
+			};
+```
