二叉树转链表

--- a/Algorithm/二叉树转链表 (二叉树与链表).md
+++ b/Algorithm/二叉树转链表 (二叉树与链表).md
@@ -87,4 +87,28 @@
     };
 ```
 - 问题：  
-	代码中last指针在使用中只进行了赋值操作，虽然传的是引用，但在递归中继续传的是left_last和right_last；注释掉last语句程序出错，在if(right)中将if(left_last)left_last->right = right;改为if(last)last->right = right;程序运行也正确
+	- 代码中last指针在使用中只进行了赋值操作，虽然传的是引用，但在递归中继续传的是left_last和right_last；注释掉last语句程序出错，在if(right)中将if(left_last)left_last->right = right;改为if(last)last->right = right;程序运行也正确
+	- if(left_last)作用
+	- 只需要找到左子树的last与右子树相连就行，为什么右子树拉直后还要更新last
+- 答：
+	- last传的是引用，例如在if(left)中，更新了left_last，这个值与last相同，下次调用时会更新left_last，相当于也更新了last，因为是同一个值，所以last是有使用的
+	- 在if(right)中有if(left_last)，因为left_last在进入递归程序中被赋为NULL，如果有左子树，则left_last会被更新，此时不为空，执行左子树的与右子树的连接
+	- 
+
+- 其它解法：
+``` cpp
+class Solution {
+public:
+    void flatten(TreeNode* root) {
+        if(!root) return;
+        flatten(root->left);
+        flatten(root->right);
+        TreeNode* tem=root->right;
+        root->right=root->left;
+        root->left=NULL;
+        while(root->right!=NULL)
+            root=root->right;
+        root->right=tem;
+    }
+};
+```
